name:                HaskellKoans
version:             0.1.0.0
description:         Koans to learn Haskell
homepage:            https://github.com/gregberns/HaskellKoans#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Greg Berns
category:            Learning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src, src/koans
  exposed-modules:     ABasicFunctions
  build-depends:       base,
                       hspec,
                       split,
                       HUnit
  default-language:    Haskell2010

test-suite HaskellKoans-test
  type:                exitcode-stdio-1.0
  main-is:             Run.hs
  hs-source-dirs:      test,
                       src,
                       src/koans
  build-depends:       base, 
                       HaskellKoans,
                       hspec,
                       split,
                       HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gregberns/HaskellKoans
